// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#1030a0 to lch 1`] = `
Array [
  140.58353023657088,
  149.4126677600652,
  -1.1137447282511255,
]
`;

exports[`#4080ff to xyz 1`] = `
Array [
  689.6084082047805,
  666.9149008306493,
  1433.745832626999,
]
`;

exports[`#8040ff to lab 1`] = `
Array [
  173.66631558842982,
  179.98016257097248,
  -144.87292535208206,
]
`;

exports[`rgb to lab 1`] = `
Array [
  214.22773845935245,
  -4.557257638799217,
  -52.928313534087714,
]
`;

exports[`rgb to lch 1`] = `
Array [
  214.22773845935245,
  53.12414677666914,
  1.4849057094243034,
]
`;

exports[`rgb to xyz 1`] = `
Array [
  732.8925806633893,
  781.8059558117195,
  1239.1930835734872,
]
`;

exports[`roundtrip xyz black 1`] = `
Array [
  0,
  0,
  0,
]
`;

exports[`roundtrip xyz random 1`] = `
Array [
  192,
  130,
  27,
]
`;

exports[`roundtrip xyz white 1`] = `
Array [
  255,
  255,
  255,
]
`;

exports[`xyz to rgb 1`] = `
Array [
  0,
  34,
  39,
]
`;
